# logger

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/async_logger/: logger.hpp
src/: ConsoleLoggerImpl.cc  ConsoleLoggerImpl.hpp  FileLoggerImpl.cc  FileLoggerImpl.hpp  FileLoggerThread.cc  FileLoggerThread.hpp  console_logger_impl.hpp  file_logger_impl.hpp  file_logger_thread.cc  file_logger_thread.hpp  log.cc  log.hpp  logger.cc  main.cc  ringbuffer.cc  ringbuffer.hpp  ringbuffer_fwd.hpp
test/: main.cc
